2008-05-23 Major revision of hist(). Can handle 2D arrays and create
           stacked histogram plots; keyword 'width' deprecated and
           rwidth (relative width) introduced; align='edge' changed
           to center of bin - MM

2008-05-22 Added support for ReST-based doumentation using Sphinx.
           Documents are located in doc/, and are broken up into
           a users guide and an API reference. To build, run the
           make.py files. Sphinx-0.4 is needed to build generate xml,
           which will be useful for rendering equations with mathml,
           use sphinx from svn until 0.4 is released - DSD

2008-05-21 Fix segfault in TkAgg backend - MGD

2008-05-21 Fix a "local variable unreferenced" bug in plotfile - MM

2008-05-19 Fix crash when Windows can not access the registry to
           determine font path [Bug 1966974, thanks Patrik Simons] - MGD

2008-05-16 removed some unneeded code w/ the python 2.4 requirement.
           cbook no longer provides compatibility for reversed,
           enumerate, set or izip.  removed lib/subprocess, mpl1,
           sandbox/units, and the swig code.  This stuff should remain
           on the maintenance branch for archival purposes. JDH

2008-05-16 Reorganized examples dir - JDH

2008-05-16 Added 'elinewidth' keyword arg to errorbar, based on patch
           by Christopher Brown - MM

2008-05-16 Added 'cumulative' keyword arg to hist to plot cumulative
           histograms. For normed hists, this is normalized to one - MM

2008-05-15 Fix Tk backend segfault on some machines - MGD

2008-05-14 Don't use stat on Windows (fixes font embedding problem) - MGD

2008-05-09 Fix /singlequote (') in Postscript backend - MGD

2008-05-08 Fix kerning in SVG when embedding character outlines - MGD

2008-05-07 Switched to future numpy histogram semantic in hist - MM

2008-05-06 Fix strange colors when blitting in QtAgg and Qt4Agg - MGD

2008-05-05 pass notify_axes_change to the figure's add_axobserver