@@ -1,8 +1,12 @@
+    New axes function and Axes method provide control over the plot
+    color cycle: axes.set_default_color_cycle(clist) and
+    Axes.set_color_cycle(clist).
+
     matplotlib now requires python2.4, so matplotlib.cbook will no
     loner provide set, enumerate, reversed or izip compatability functions
 
     In numpy 1.0 bins are specified by the left edges only.  The axes
-    method "hist" now uses future numpy 1.3 semantic for histograms. 
+    method "hist" now uses future numpy 1.3 semantic for histograms.
     Providing binedges, the last value gives the upper-right edge now,
     which was implicitly set to +infinity in numpy 1.0.  This also means
     that the last bin doesn't contain upper outliers any more by default.
