@@ -1,3 +1,6 @@
+2008-05-23 Provided a function and a method for controlling the
+           plot color cycle. - EF
+
 2008-05-23 Major revision of hist(). Can handle 2D arrays and create
            stacked histogram plots; keyword 'width' deprecated and
            rwidth (relative width) introduced; align='edge' changed
